@@ -8,7 +8,6 @@ jeden.
 11. Add ansi color support.
 21. Fix print of Snak with qualifier.
 22. Add print_represenations() helper.
-23. Add doc.
 25. Fix TODOs in Wikibase::Datatype::Print::Value::Time
 26. Add examples to Wikibase::Datatype::Print::Utils.
 28. Common indentation level.
@@ -87,3 +86,6 @@ OK [20230421] skim
 
 32. Implement Value::Time BCE.
 OK [20230421] skim
+
+23. Add doc.
+OK [20230502] skim
